--- a/src/main/resources/templates/usuarios/usuarios-form.html
+++ b/src/main/resources/templates/usuarios/usuarios-form.html
@@ -61,8 +61,8 @@
                 <!-- Contraseña -->
                 <div class="mb-3">
                     <label for="contraseña" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="contraseña" name="contraseña" required minlength="6"
-                        th:field="*{contraseña}">
+                    <input type="password" class="form-control" id="contrasena" name="contrasena" required minlength="6"
+                        th:field="*{contrasena}">
                     <div class="invalid-feedback">La contraseña debe tener al menos 6 caracteres.</div>
                 </div>
 
