--- a/src/main/resources/templates/layout-dashboard.html
+++ b/src/main/resources/templates/layout-dashboard.html
@@ -49,9 +49,13 @@
                 <li class="nav-item"><a th:href="@{/usuarios/listadoAdmin}" class="nav-link text-white">Usuarios</a>
                 </li>
                 <li class="nav-item"><a th:href="@{/ventas/nuevo}" class="nav-link text-white">Ventas</a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-white">Reportes</a></li>
+                <li class="nav-item"><a th:href="@{/reportes}" class="nav-link text-white">Reportes</a></li>
                 <li class="nav-item"><a href="#" class="nav-link text-white">Configuración</a></li>
                 <li class="nav-item"><a th:href="@{/}" class="nav-link text-white">Stella</a></li>
+                <form id="frmSalir" th:action="@{/logout}" method="post" class="text-bg-danger mt-5">
+                    <a class="dropdown-item" href="#" onclick="$('#frmSalir').submit();">Cerrar
+                        Sesión</a>
+                </form>
             </ul>
         </nav>
 
