--- a/src/main/resources/templates/Dashboard.html
+++ b/src/main/resources/templates/Dashboard.html
@@ -209,8 +209,8 @@
                     datasets: [{
                         label: 'Ventas',
                         data: ventasMes,
-                        borderColor: 'rgb(75, 192, 192)',
-                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                        borderColor: 'rgba(255, 39, 0, 0.7)',
+                        backgroundColor: 'rgba(255, 162, 148, 0.4)',
                         fill: true,
                         tension: 0.3
                     }]
